--- a/package.json
+++ b/package.json
@@ -27,6 +27,15 @@
     "slugify": "^1.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "nodemon": "^2.0.12",
+    "prettier": "^2.3.2"
   }
 }
