--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-tabs": "^3.2.2",
     "web-vitals": "^1.1.2"
   },
   "proxy": "http://localhost:3003",
