--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "morgan": "^1.10.0",
+    "rc-rate": "^2.9.1",
     "slugify": "^1.6.0"
   },
   "devDependencies": {
