--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^5.13.3",
     "morgan": "^1.10.0",
     "rc-rate": "^2.9.1",
+    "react-cookie": "^4.0.3",
     "slugify": "^1.6.0"
   },
   "devDependencies": {
