--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,9 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
-    "query-string": "^4.3.4",
+    "js-cookie": "^3.0.0",
     "moment": "^2.29.1",
+    "query-string": "^4.3.4",
     "rc-rate": "^2.9.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
